tool/src/java/snapshots/diplomat_tool__java__test__multiple_callbacks.snap
---
source: tool/src/java/mod.rs
expression: gen_struct_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.lang.invoke.VarHandle;
import java.nio.charset.StandardCharsets;
import java.lang.invoke.MethodHandles;
import java.lang.invoke.MethodType;

public class CallbackWrapper {

    static final StructLayout LAYOUT = MemoryLayout.structLayout(
        ValueLayout.JAVA_BOOLEAN.withName("cantBeEmpty")
    );
    private static final VarHandle VH_CANT_BE_EMPTY = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("cantBeEmpty"));
    private static final MethodHandle CALLBACKWRAPPER_TEST_MULTIPLE_CB_ARGS;

    static {
        CALLBACKWRAPPER_TEST_MULTIPLE_CB_ARGS = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("CallbackWrapper_test_multiple_cb_args").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.JAVA_INT, DiplomatLib.DIPLOMAT_CALLBACK_LAYOUT, DiplomatLib.DIPLOMAT_CALLBACK_LAYOUT)
        );
    }

    @FunctionalInterface
    public interface TestMultipleCbArgsF {
        int invoke();
    }

    @FunctionalInterface
    public interface TestMultipleCbArgsG {
        int invoke(int arg0);
    }

    private static int runCallback_testMultipleCbArgs_f(MemorySegment data) {
        @SuppressWarnings("unchecked")
        TestMultipleCbArgsF cb = DiplomatLib.getCallback(data, TestMultipleCbArgsF.class);
        return cb.invoke();
    }

    private static int runCallback_testMultipleCbArgs_g(MemorySegment data, int arg0) {
        @SuppressWarnings("unchecked")
        TestMultipleCbArgsG cb = DiplomatLib.getCallback(data, TestMultipleCbArgsG.class);
        return cb.invoke(arg0);
    }

    private static final MethodHandle MH_RUN_testMultipleCbArgs_f;
    private static final MemorySegment UPCALL_testMultipleCbArgs_f;
    static {
        try {
            MH_RUN_testMultipleCbArgs_f = MethodHandles.lookup().findStatic(
                CallbackWrapper.class, "runCallback_testMultipleCbArgs_f",
                MethodType.methodType(int.class, MemorySegment.class));
            UPCALL_testMultipleCbArgs_f = DiplomatLib.LINKER_SHARED.upcallStub(
                MH_RUN_testMultipleCbArgs_f,
                FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS),
                Arena.global());
        } catch (ReflectiveOperationException ex) {
            throw new ExceptionInInitializerError(ex);
        }
    }

    private static final MethodHandle MH_RUN_testMultipleCbArgs_g;
    private static final MemorySegment UPCALL_testMultipleCbArgs_g;
    static {
        try {
            MH_RUN_testMultipleCbArgs_g = MethodHandles.lookup().findStatic(
                CallbackWrapper.class, "runCallback_testMultipleCbArgs_g",
                MethodType.methodType(int.class, MemorySegment.class, int.class));
            UPCALL_testMultipleCbArgs_g = DiplomatLib.LINKER_SHARED.upcallStub(
                MH_RUN_testMultipleCbArgs_g,
                FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT),
                Arena.global());
        } catch (ReflectiveOperationException ex) {
            throw new ExceptionInInitializerError(ex);
        }
    }

    public boolean cantBeEmpty;

    public CallbackWrapper() {
    }

    CallbackWrapper(boolean cantBeEmpty) {
        this.cantBeEmpty = cantBeEmpty;
    }

    static CallbackWrapper fromNative(MemorySegment seg) {
        return new CallbackWrapper(
            (boolean) VH_CANT_BE_EMPTY.get(seg, 0L)
        );
    }

    MemorySegment toNative(Arena arena) {
        var seg = arena.allocate(LAYOUT);
        VH_CANT_BE_EMPTY.set(seg, 0L, this.cantBeEmpty);
        return seg;
    }

    void updateFromNative(MemorySegment seg) {
        this.cantBeEmpty = (boolean) VH_CANT_BE_EMPTY.get(seg, 0L);
    }

    public static int testMultipleCbArgs(TestMultipleCbArgsF f, TestMultipleCbArgsG g) {
        try (var arena = Arena.ofConfined()) {
            var fId = DiplomatLib.registerCallback(f);
            var fNative = arena.allocate(DiplomatLib.DIPLOMAT_CALLBACK_LAYOUT);
            DiplomatLib.VH_CB_DATA.set(fNative, 0L, fId);
            DiplomatLib.VH_CB_RUN.set(fNative, 0L, UPCALL_testMultipleCbArgs_f);
            DiplomatLib.VH_CB_DESTRUCTOR.set(fNative, 0L, DiplomatLib.DESTRUCTOR_STUB);
            var gId = DiplomatLib.registerCallback(g);
            var gNative = arena.allocate(DiplomatLib.DIPLOMAT_CALLBACK_LAYOUT);
            DiplomatLib.VH_CB_DATA.set(gNative, 0L, gId);
            DiplomatLib.VH_CB_RUN.set(gNative, 0L, UPCALL_testMultipleCbArgs_g);
            DiplomatLib.VH_CB_DESTRUCTOR.set(gNative, 0L, DiplomatLib.DESTRUCTOR_STUB);
            return (int) CALLBACKWRAPPER_TEST_MULTIPLE_CB_ARGS.invokeExact(fNative, gNative);
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
