tool/src/java/snapshots/diplomat_tool__java__test__opaque_indexer.snap
---
source: tool/src/java/mod.rs
expression: gen_opaque_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.nio.charset.StandardCharsets;

public class MyVec implements AutoCloseable {

    private static final MethodHandle DESTROY;
    private static final MethodHandle MYVEC_GET;
    static final StructLayout MYVEC_GET_RESULT = MemoryLayout.structLayout(
            ValueLayout.JAVA_DOUBLE.withName("union_val"),
            ValueLayout.JAVA_BOOLEAN.withName("is_ok"),
            MemoryLayout.paddingLayout(7)
        );

    static {
        DESTROY = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("MyVec_destroy").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
        );
        MYVEC_GET = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("MyVec_get").orElseThrow(),
            FunctionDescriptor.of(MYVEC_GET_RESULT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG)
        );
    }

    final MemorySegment handle;

    MyVec(MemorySegment handle) {
        this.handle = handle;
    }

    @Override
    public void close() {
        try {
            DESTROY.invokeExact(handle);
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    private Double getInternal(long i) {
        try (var arena = Arena.ofConfined()) {
            var result = (MemorySegment) MYVEC_GET.invokeExact((SegmentAllocator) arena, handle, i);
            var isOk = result.get(ValueLayout.JAVA_BOOLEAN, 8L);
            if (isOk) {
                return (double) result.get(ValueLayout.JAVA_DOUBLE, 0L);
            } else {
                return null;
            }
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public Double get(long index) {
        Double returnVal = getInternal(index);
        if (returnVal == null) {
            throw new IndexOutOfBoundsException("Index " + index + " is out of bounds.");
        }
        return returnVal;
    }
}
