tool/src/java/snapshots/diplomat_tool__java__test__opaque_simple.snap
---
source: tool/src/java/mod.rs
expression: gen_opaque_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.nio.charset.StandardCharsets;

public class Locale implements AutoCloseable {

    private static final MethodHandle DESTROY;
    private static final MethodHandle ICU4X_LOCALE_NEW_MV1;

    static {
        DESTROY = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("icu4x_Locale_destroy_mv1").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
        );
        ICU4X_LOCALE_NEW_MV1 = DiplomatLib.LINKER_SHARED.downcallHandle(
            DiplomatLib.LIB.find("icu4x_Locale_new_mv1").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.ADDRESS, DiplomatLib.DIPLOMAT_STRING_VIEW)
        );
    }

    final MemorySegment handle;

    Locale(MemorySegment handle) {
        this.handle = handle;
    }

    @Override
    public void close() {
        try {
            DESTROY.invokeExact(handle);
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public static Locale new_(String name) {
        try (var arena = Arena.ofConfined()) {
            byte[] nameBytes = name.getBytes(StandardCharsets.UTF_8);

            var nameSeg = arena.allocateFrom(ValueLayout.JAVA_BYTE, nameBytes);
            var nameSlice = arena.allocate(DiplomatLib.DIPLOMAT_STRING_VIEW);
            DiplomatLib.VH_SV_DATA.set(nameSlice, 0L, nameSeg);
            DiplomatLib.VH_SV_LEN.set(nameSlice, 0L, (long) nameBytes.length);
            return new Locale((MemorySegment) ICU4X_LOCALE_NEW_MV1.invokeExact(nameSlice));
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
