tool/src/java/snapshots/diplomat_tool__java__test__opaque_with_primitives.snap
---
source: tool/src/java/mod.rs
expression: gen_opaque_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.nio.charset.StandardCharsets;

public class Counter implements AutoCloseable {

    private static final Linker LINKER = Linker.nativeLinker();
    private static final SymbolLookup LIB;

    private static final MethodHandle DESTROY;
    private static final MethodHandle COUNTER_NEW;
    private static final MethodHandle COUNTER_GET_VALUE;
    private static final MethodHandle COUNTER_ADD;

    static {
        System.loadLibrary("diplomat_example");
        LIB = SymbolLookup.loaderLookup();
        DESTROY = LINKER.downcallHandle(
            LIB.find("Counter_destroy").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
        );
        COUNTER_NEW = LINKER.downcallHandle(
            LIB.find("Counter_new").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_INT)
        );
        COUNTER_GET_VALUE = LINKER.downcallHandle(
            LIB.find("Counter_get_value").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS)
        );
        COUNTER_ADD = LINKER.downcallHandle(
            LIB.find("Counter_add").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT)
        );
    }

    final MemorySegment handle;

    Counter(MemorySegment handle) {
        this.handle = handle;
    }

    @Override
    public void close() {
        try {
            DESTROY.invokeExact(handle);
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public static Counter new_(int start) {
        try {
            return new Counter((MemorySegment) COUNTER_NEW.invokeExact(start));
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public int getValue() {
        try {
            return (int) COUNTER_GET_VALUE.invokeExact(handle);
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public void add(int amount) {
        try {
            COUNTER_ADD.invokeExact(handle, amount);
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
