tool/src/java/snapshots/diplomat_tool__java__test__opaque_with_utf16_string.snap
---
source: tool/src/java/mod.rs
expression: gen_opaque_for_test(tk_stream)
---
package dev.diplomattest.somelib;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import java.nio.charset.StandardCharsets;

public class Utf16Wrap implements AutoCloseable {

    private static final Linker LINKER = Linker.nativeLinker();
    private static final SymbolLookup LIB;

    private static final MethodHandle DESTROY;
    private static final MethodHandle UTF16WRAP_FROM_UTF16;

    static {
        System.loadLibrary("diplomat_example");
        LIB = SymbolLookup.loaderLookup();
        DESTROY = LINKER.downcallHandle(
            LIB.find("Utf16Wrap_destroy").orElseThrow(),
            FunctionDescriptor.ofVoid(ValueLayout.ADDRESS)
        );
        UTF16WRAP_FROM_UTF16 = LINKER.downcallHandle(
            LIB.find("Utf16Wrap_from_utf16").orElseThrow(),
            FunctionDescriptor.of(ValueLayout.ADDRESS, DiplomatLib.DIPLOMAT_STRING_VIEW)
        );
    }

    final MemorySegment handle;

    Utf16Wrap(MemorySegment handle) {
        this.handle = handle;
    }

    @Override
    public void close() {
        try {
            DESTROY.invokeExact(handle);
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }

    public static Utf16Wrap fromUtf16(String input) {
        try (var arena = Arena.ofConfined()) {
            char[] inputChars = input.toCharArray();

            var inputSeg = arena.allocateFrom(ValueLayout.JAVA_CHAR, inputChars);
            var inputSlice = arena.allocate(DiplomatLib.DIPLOMAT_STRING_VIEW);
            DiplomatLib.VH_SV_DATA.set(inputSlice, 0L, inputSeg);
            DiplomatLib.VH_SV_LEN.set(inputSlice, 0L, (long) inputChars.length);
            return new Utf16Wrap((MemorySegment) UTF16WRAP_FROM_UTF16.invokeExact(inputSlice));
        } catch (RuntimeException ex) {
            throw ex;
        } catch (Throwable ex) {
            throw new RuntimeException(ex);
        }
    }
}
